# orango-py

./: .gitignore  Readme.md  orango.py  pyproject.toml  requirements.txt  setup.py
examples/: langchain.py  openai_functions.py  simple.py
tests/: test_langchain.py  test_main.py  test_openai_functions.py  test_simple.py
